--- a/client/src/components/Navbar/Navbar.style.scss
+++ b/client/src/components/Navbar/Navbar.style.scss
@@ -1,5 +1,30 @@
+*{
+  margin: 0px;
+  padding: 0px;
+}
 .navbar {
   display: flex;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
+  position: fixed;
+padding: 10px;
+  background-color: beige;
+}
+img{
+  width: 40px;
+  height: 40px;
+}
+.navbar__account button{
+  border: 0px;
+  padding: 5px;
+  font-size: 18px;
+background-color: inherit;
+font-weight: 700;
+margin-right: 20px;
+cursor: pointer;
+
+} 
+button:hover{
+  border-bottom: 3px solid blue;
 }
