Used font family in navbar especially in button

--- a/client/src/components/Navbar/Navbar.style.scss
+++ b/client/src/components/Navbar/Navbar.style.scss
@@ -23,7 +23,7 @@ background-color: inherit;
 font-weight: 700;
 margin-right: 20px;
 cursor: pointer;
-
+font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 } 
 button:hover{
   border-bottom: 3px solid blue;
