--- a/client/src/components/Navbar/Navbar.style.scss
+++ b/client/src/components/Navbar/Navbar.style.scss
@@ -1,14 +1,11 @@
-*{
-  margin: 0px;
-  padding: 0px;
-}
+
 .navbar {
   display: flex;
   width: 100%;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
-padding: 10px;
+  position: fixed; top: 0px;   
+  padding: 10px;
   background-color: beige;
 }
 img{
@@ -19,11 +16,11 @@ img{
   border: 0px;
   padding: 5px;
   font-size: 18px;
-background-color: inherit;
-font-weight: 700;
-margin-right: 20px;
-cursor: pointer;
-font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  background-color: inherit;
+  font-weight: 700;
+  margin-right: 20px;
+  cursor: pointer;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 } 
 button:hover{
   border-bottom: 3px solid blue;
