--- a/client/src/components/Page/Page.style.scss
+++ b/client/src/components/Page/Page.style.scss
@@ -1,4 +1,9 @@
 .page {
   // TODO: update height
   min-height: 100vh;
+  margin: 20px;
+  color: gold;
+  background-color: lavender;
+  font-size: 20px;
 }
+
